finishing instructions page

--- a/instructions.html
+++ b/instructions.html
@@ -10,17 +10,17 @@
 </head>
 
 <div id="instructions-box" class="ai2html">
-	<div id="instructions" class="artboard" style="max-width: 100%;max-height: 2938px" data-aspect-ratio="0.411" data-min-width="0">
+	<div id="instructions" class="artboard" style="max-width: 100%;max-height: 3942px" data-aspect-ratio="0.411" data-min-width="0">
 
 		<div class="header blue1"></div>
-		<div style="padding: 0 0 2678px 0;"></div>
+		<div style="padding: 0 0 3682px 0;"></div>
 		<div class="footer blue1"> </div>
 
 		<a href="https://maiam6242.github.io/braille-printer/">
 				<img class="logo" alt="Portabraille Printer Logo" src="Website Graphics\Logo.png"/>
 		</a>
 
-    <div class="dotdotdot" style="top:16%;left:50%;margin-left:-55px">
+    <div class="dotdotdot" style="top:12.2%;left:50%;margin-left:-55px">
       <div class="dot"></div>
       <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
       <div class="dot"></div>
@@ -28,15 +28,21 @@
       <div class="dot"></div>
     </div>
 
-    <div class="circle300 blue3" style="left:31%;top:24%"></div>
-    <div class="circle400 blue2" style="left:3%;top:17%"></div>
-    <div class="circle150 blue1" style="left:6%;top:20%"></div>
-    <div class="frame" style="height:350px; width:530px; left:8%;top:20%"></div>
+    <div class="circle300 blue3" style="left:31%;top:20%"></div>
+    <div class="circle400 blue2" style="left:3%;top:15%"></div>
+    <div class="circle150 blue1" style="left:6%;top:23%"></div>
+    <div class="aiAbs" style="align:center;height:9%;width:43%;left:8%;top:16.5%">
+      <div class="frame" style="height:100%;width:100%;"></div>
+      <img class="portrait" alt="Picture of the Portabraille interface" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\instructions1.jpg"/></img>
+    </div>
 
-    <div class="circle400 blue2" style="right:3%;top:62%"></div>
-    <div class="circle300 blue3" style="right:3%;top:57.5%"></div>
-    <div class="circle150 blue1" style="right:40%;top:69%"></div>
-    <div class="frame" style="height:350px; width:530px; left:52%;top:60.5%"></div>
+    <div class="circle400 blue2" style="right:3%;top:65%"></div>
+    <div class="circle300 blue3" style="right:3%;top:60.5%"></div>
+    <div class="circle150 blue1" style="right:40%;top:70%"></div>
+    <div class="aiAbs" style="align:center;height:9%;width:43%;right:8%;top:63.5%">
+      <div class="frame" style="height:100%;width:100%;"></div>
+      <img class="portrait" alt="Picture of the Portabraille interface" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\instructions2.jpg"/></img>
+    </div>
 
     <div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:860px;width:81px;">
 			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/instructions.html">instructions</a>
@@ -70,49 +76,58 @@
       <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/team.html">team</a>
 		</div>
 
-		<div class="Layer_1 aiAbs" style="top:8.7484%;left:49.9236%;margin-left:-32.6429%;width:65.2858%;">
-			<p class="pstyle0">Ready to turn your document into some beautiful braille? Follow the instructions below to get started with the Portabraille Printer!</p>
-		</div>
-		<div class="Layer_1 aiAbs" style="top:23.19%;left:56.6751%;width:36.7854%;">
-			<p class="pstyle1">First, turn the printer on by flipping the power switch. </p>
-			<p>&nbsp;</p>
-			<p>(insert location of power switch)</p>
-		</div>
-		<div class="Layer_1 aiAbs" style="top:35.7253%;left:50%;margin-left:-39.6%;width:79.2046%;">
-			<p class="pstyle2">Next, you&rsquo;ll need to you&rsquo;ll need to upload a file to the printer. </p>
-			<p>&nbsp;</p>
-			<p class="pstyle3">You can do this manually or wirelessly. If you&rsquo;d like to manually upload your file, insert a flash drive with the file into the printer USB port (insert location), then use the [PLAY/PAUSE] button on the interface to toggle through and select your file. If you&rsquo;d like to wirelessly upload your file, you need to connect your device to the Portabraille Wi-Fi network. The password is <b>TeamDotDotDot!</b> and you can connect to the network like you would any other new wifi network. Usually, this means going into your wifi settings and selecting the Portabraille network. Once you are on the network, to get to the Portabraille Portal interface, type <b>10.3.141.1:5000</b> into your browser search bar. In the portal, you can upload and submit your text file! </p>
-		</div>
-		<div class="Layer_1 aiAbs" style="top:56.9415%;right:55.4684%;width:38.691%;">
-			<p class="pstyle4">Almost ready!  Prepare your paper and check the READY TO PRINT indicator.</p>
-			<p>&nbsp;</p>
-			<p class="pstyle5">The Portabraille Printer takes in one sheet of paper at a time, so you&rsquo;ll need to manually feed in each sheet by lining it up in the paper tray [insert location of paper tray]. Additionally, before you print, make sure to get visual or aural confirmation from the READY TO PRINT indicator!</p>
-		</div>
-		<div class="Layer_1 aiAbs" style="top:77.6465%;left:10.3064%;width:79.2046%;">
-			<p class="pstyle2">Finally, hit the PLAY button to get your print started!</p>
-			<p>&nbsp;</p>
-			<p class="pstyle3">Get ready for some beautiful braille! However, if there&rsquo;s a problem with your print, hit the CANCEL button to completely stop it, or the PLAY/PAUSE button to pause and then start the print where you left off.</p>
-			<p>&nbsp;</p>
-			<p class="pstyle3">The Portabraille Printer also has an ERROR indicator LED and a READY TO PRINT indicator LED, located in the top corners of the interface. Anytime you interact with the printer, it plays a noise to confirm your command, but if you&rsquo;d prefer a more quiet printing experience, change the toggle switch at the bottom of the interface to SOUND OFF instead of SOUND ON.</p>
-		</div>
+    <div id="ai0-1" class="Layer_1 aiAbs" style="top:6.5199%;left:50.0012%;margin-left:-32.6429%;width:65.2858%;">
+      <p class="pstyle0">Ready to turn your document into some beautiful braille? Follow the instructions below to get started with the Portabraille Printer!</p>
+    </div>
+    <div id="ai0-2" class="Layer_1 aiAbs" style="top:15.6529%;left:56.6751%;width:36.7854%;">
+      <p class="pstyle1">First, turn the printer on by flipping the power switch. </p>
+      <p>&nbsp;</p>
+      <p>You can find the power switch attached to the 8.5 inch by 4.5 inch by 2 inch metal box which connects to the printer via the two wires which come out of the back (on the same side as the place where paper is inserted). </p>
+    </div>
+    <div id="ai0-3" class="Layer_1 aiAbs" style="top:29.6061%;left:10.3839%;width:79.2046%;">
+      <p class="pstyle2" style="text-align:center">Next, you&rsquo;ll need to you&rsquo;ll need to upload a file to the printer. </p>
+      <p>&nbsp;</p>
+      <p class="pstyle3">Note that you must insert your file as a .txt file. If you are using a word document or something similar, you can choose to save your document as a .txt file using your word processor&rsquo;s &ldquo;Save as&rdquo; menu.</p>
+      <p>&nbsp;</p>
+      <p class="pstyle3">You can do this manually or wirelessly. If you&rsquo;d like to manually upload your file, insert a flash drive with the file on it into the printer USB port right above the top left of the interface, then use the start print button on the interface to select your file when it has been read. If you don&rsquo;t select a file, the Portabraille will automatically print the first .txt file listed alphabetically on your USB. If the printer is not reading when you have put your USB in, there is a chance that your flash drive is protected and it is denying the printer permission to access it. Usually, the best way to resolve this quickly is to put the file on a different USB, but if you&rsquo;d like to modify your USB to be read, you can ______. //TODO figure this out</p>
+      <p>&nbsp;</p>
+      <p class="pstyle3">You can also wirelessly upload your file. If you&rsquo;d like to do that, you need to connect your device to the Portabraille Wi-Fi network. The password is TeamDotDotDot! and you can connect to the network like you would any other new Wi-Fi network. Usually, this means going into your Wi-Fi settings and selecting the Portabraille network. Once you are on the network (this process can take up to around 30 seconds), to get to the Portabraille Portal interface, type 10.3.141.1:5000 into your browser search bar. In the portal, you can upload and submit your text file!</p>
+      <p>&nbsp;</p>
+    </div>
+    <div id="ai0-4" class="Layer_1 aiAbs" style="top:62.6625%;right:55.914%;width:38.691%;">
+      <p class="pstyle4">Almost ready!  Prepare your paper and check the READY TO PRINT indicator.</p>
+      <p>&nbsp;</p>
+      <p class="pstyle5">If it is lit up, that means the printer is ready to print. The printer will also say &ldquo;The printer is ready to print&rdquo; out loud when it is ready to print.</p>
+    </div>
+    <div id="ai0-5" class="Layer_1 aiAbs" style="top:74.9413%;left:10.6425%;width:79.2046%;">
+      <p class="pstyle3">The Portabraille Printer takes in one sheet of paper at a time, so you&rsquo;ll need to manually feed in each sheet by lining it up in the paper tray in the back of the printer. Additionally, before you print, make sure to get visual or aural confirmation from the READY TO PRINT indicator!</p>
+    </div>
+    <div id="ai0-6" class="Layer_1 aiAbs" style="top:80.8778%;left:10.1253%;width:79.2046%;">
+      <p class="pstyle2" style="text-align:center">Finally, hit the PLAY button to get your print started!</p>
+      <p>&nbsp;</p>
+      <p class="pstyle3">Get ready for some beautiful braille! </p>
+      <p class="pstyle3">However, if there&rsquo;s a problem with your print, hit the CANCEL button to completely stop it, or the PLAY/PAUSE button to pause and then start the print where you left off.</p>
+      <p>&nbsp;</p>
+      <p class="pstyle3">The Portabraille Printer also has an ERROR indicator LED and a READY TO PRINT indicator LED, located in the top corners of the interface. Anytime you interact with the printer, it plays a noise to confirm your command, but if you&rsquo;d prefer a more quiet printing experience, change the toggle switch at the bottom of the interface to SOUND OFF instead of SOUND ON.</p>
+    </div>
 
     <div style="width:1000px;left:50%;margin-left:-500px">
-  		<div class="Layer_1 aiAbs aiPointText" style="top:2898px;margin-top:-17.5px;left:9.4243%;width:81px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:3902px;margin-top:-17.5px;left:9.4243%;width:81px;">
   			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/instructions.html">instructions</a>
   		</div>
-      <div class="Layer_1 aiAbs aiPointText" style="top:2898px;margin-top:-17.5px;left:27%;width:81px;">
+      <div class="Layer_1 aiAbs aiPointText" style="top:3902px;margin-top:-17.5px;left:27%;width:81px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/system.html">system</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:2898px;margin-top:-17.5px;left:42%;width:73px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:3902px;margin-top:-17.5px;left:42%;width:73px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/process.html">process</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:2898px;margin-top:-17.5px;left:57%;width:160px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:3902px;margin-top:-17.5px;left:57%;width:160px;">
           <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/blog.html">blog</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:2898px;margin-top:-17.5px;left:69%;width:133px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:3902px;margin-top:-17.5px;left:69%;width:133px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/resources.html">resources</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:2898px;margin-top:-17.5px;left:85%;width:110px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:3902px;margin-top:-17.5px;left:85%;width:110px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/team.html">team</a>
   		</div>
     </div>
