--- a/team.html
+++ b/team.html
@@ -80,10 +80,11 @@
 		<div class="dropdown Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:660px;width:73px;">
       <a style="text-decoration:none; padding-bottom:10px;" class="tabs" href="https://maiam6242.github.io/braille-printer/system.html">system</a>
       <div class="dropdown-content blue2" style="left:-10px; top:40px">
-        <a href="#">mechanical</a>
-        <a href="#">electrical</a>
-        <a href="#">firmware</a>
-        <a href="#">software</a>
+        <a href="https://maiam6242.github.io/braille-printer/mechanical.html">mechanical</a>
+        <a href="https://maiam6242.github.io/braille-printer/electrical.html">electrical</a>
+        <a href="https://maiam6242.github.io/braille-printer/firmware.html">firmware</a>
+        <a href="https://maiam6242.github.io/braille-printer/software.html">software</a>
+        <a href="https://maiam6242.github.io/braille-printer/design.html">design</a>
       </div>
 		</div>
     <div class="dropdown Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:420px;width:160px;">
@@ -93,7 +94,7 @@
         <a href="https://maiam6242.github.io/braille-printer/sprint2.html">sprint 2</a>
         <a href="https://maiam6242.github.io/braille-printer/sprint3.html">sprint 3</a>
         <a href="https://maiam6242.github.io/braille-printer/sprint4.html">sprint 4</a>
-        <a href="#">budget</a>
+        <a href="https://maiam6242.github.io/braille-printer/budget.html">budget</a>
       </div>
 		</div>
 		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:250px;width:160px;">
