adding system files. love, annie

--- a/team.html
+++ b/team.html
@@ -25,9 +25,9 @@
     <div class="circle350 blue3" style="left:3%;top:11%"></div>
     <div class="circle150 blue1" style="left:3%;top:6%"></div>
     <div class="circle450 blue2" style="left:20%;top:6%"></div>
-    <div class="aiAbs" style="align:center;height:9.5%;width:48%;left:5%;top:7%">
-      <div class="frame" style="height:100%;width:100%;"></div>
-      <img class="portrait" alt="Colin's Portrait" style="width:93%;height:89%;top:20px;left:50%;margin-left:-46%" src="Website Graphics\teamGroup.jpg"/></img>
+    <div class="aiAbs" style="align:center;height:11%;width:48%;left:5%;top:7%">
+      <div class="frame" style="height:51vh;width:100%;"></div>
+      <img class="portrait" alt="Team dot dot dot group photo" style="width:93%;height:auto%;top:20px;left:50%;margin-left:-46%" src="Website Graphics\teamGroup.jpg"/></img>
     </div>
 
 
