adding sprint 2 page

--- a/sprint2.html
+++ b/sprint2.html
@@ -10,10 +10,10 @@
 </head>
 
 <div id="sprint1-box" class="ai2html" style="width:100%">
-	<div id="sprint1" class="artboard" style="max-width:100%;max-height: 5827px" data-aspect-ratio="0.24" data-min-width="0">
+	<div id="sprint1" class="artboard" style="max-width:100%;max-height: 5937px" data-aspect-ratio="0.24" data-min-width="0">
 
 		<div class="header blue1"></div>
-		<div style="padding: 0 0 5567px 0;"></div>
+		<div style="padding: 0 0 5677px 0;"></div>
 		<div class="footer blue1"> </div>
 
 		<a href="https://maiam6242.github.io/braille-printer/">
@@ -22,10 +22,13 @@
 
 		<div class="circle400 blue2" style="right:3%;top:3.85%"></div>
     <div class="circle300 blue3" style="right:3%;top:6.8%"></div>
-    <div class="circle150 blue1" style="left:44.8%;top:9.3%"></div>
-    <div class="frame" style="height:350px; width:530px; right:6%;top:4.8%"></div>
+    <div class="circle150 blue1" style="left:50.8%;top:9.3%"></div>
+    <div class="aiAbs" style="height:350px; width:530px; right:6%;top:4.8%">
+      <div class="frame" style="height:100%;width:100%;"></div>
+      <img class="portrait" alt="Some of the team in action in Colin and Nathan's room" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\sprint2working.jpg"/></img>
+    </div>
 
-		<div class="dotdotdot" style="top:13.2%;left:50%;margin-left:-55px">
+		<div class="dotdotdot" style="top:18.9%;left:50%;margin-left:-55px">
       <div class="dot"></div>
       <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
       <div class="dot"></div>
@@ -33,12 +36,15 @@
       <div class="dot"></div>
     </div>
 
-		<div class="circle300 blue3" style="right:45%;top:18.8%"></div>
-		<div class="circle400 blue2" style="left:3%;top:15.3%"></div>
-		<div class="circle150 blue1" style="right:46%;top:15.3%"></div>
-		<div class="frame" style="height:350px; width:530px; right:52%;top:16.3%"></div>
+		<div class="circle300 blue3" style="right:25%;top:24.3%"></div>
+		<div class="circle400 blue2" style="left:23%;top:20.8%"></div>
+		<div class="circle150 blue1" style="right:26%;top:20.8%"></div>
+    <div class="aiAbs" style="height:350px; width:530px; right:32%;top:21.8%">
+      <div class="frame" style="height:100%;width:100%;"></div>
+      <img class="portrait" alt="PCB diagram as of sprint 2" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\sprint2PCB.png"/></img>
+    </div>
 
-		<div class="dotdotdot" style="top:33.5%;left:50%;margin-left:-55px">
+		<div class="dotdotdot" style="top:39.5%;left:50%;margin-left:-55px">
       <div class="dot"></div>
       <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
       <div class="dot"></div>
@@ -46,12 +52,15 @@
       <div class="dot"></div>
     </div>
 
-		<div class="circle400 blue2" style="right:3%;top:38.3%"></div>
-    <div class="circle300 blue3" style="right:3%;top:36%"></div>
-    <div class="circle150 blue1" style="left:49%;top:42%"></div>
-    <div class="frame" style="height:350px; width:530px; left:52%;top:37.3%"></div>
+		<div class="circle400 blue2" style="right:23%;top:43.3%"></div>
+    <div class="circle300 blue3" style="right:23%;top:41%"></div>
+    <div class="circle150 blue1" style="left:29%;top:47%"></div>
+    <div class="aiAbs" style="height:350px; width:530px; left:32%;top:42.3%">
+      <div class="frame" style="height:100%;width:100%;"></div>
+      <img class="portrait" alt="Mechanical assembly as of sprint 2" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\sprint2mechanical.jpg"/></img>
+    </div>
 
-		<div class="dotdotdot" style="top:55.1%;left:50%;margin-left:-55px">
+		<div class="dotdotdot" style="top:59.5%;left:50%;margin-left:-55px">
       <div class="dot"></div>
       <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
       <div class="dot"></div>
@@ -59,12 +68,7 @@
       <div class="dot"></div>
     </div>
 
-		<div class="circle300 blue3" style="left:3%;top:61.4%"></div>
-    <div class="circle400 blue2" style="right:45%;top:57.4%"></div>
-    <div class="circle150 blue1" style="right:45%;top:63.4%"></div>
-    <div class="frame" style="height:350px; width:530px; left:8%;top:58.7%"></div>
-
-		<div class="dotdotdot" style="top:75.7%;left:50%;margin-left:-55px">
+		<div class="dotdotdot" style="top:78%;left:50%;margin-left:-55px">
       <div class="dot"></div>
       <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
       <div class="dot"></div>
@@ -72,12 +76,7 @@
       <div class="dot"></div>
     </div>
 
-		<div class="circle300 blue3" style="left:45%;top:81.6%"></div>
-		<div class="circle400 blue2" style="right:3%;top:78.1%"></div>
-		<div class="circle150 blue1" style="left:46%;top:78.1%"></div>
-		<div class="frame" style="height:350px; width:530px; right:6%;top:79.1%"></div>
-
-		<div class="dotdotdot" style="top:94%;left:50%;margin-left:-55px">
+		<div class="dotdotdot" style="top:92%;left:50%;margin-left:-55px">
       <div class="dot"></div>
       <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
       <div class="dot"></div>
@@ -118,65 +117,73 @@
       <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/team.html">team</a>
 		</div>
 
-		<div class="Layer_1 aiAbs" style="top:3.85%;left:5.727%;width:32.7258%;">
-			<p>&nbsp;</p>
+    <div id="ai0-1" class="Layer_1 aiAbs" style="top:5.8446%;right:61.5473%;width:32.7258%;">
 			<p class="pstyle0">During Sprint 2, our goal was to have a basic minimum viable product, or at least to have a minimum of every subsystem, even if they were not integrated.</p>
+		</div>
+		<div id="ai0-2" class="Layer_1 aiAbs" style="top:12.5818%;left:9.1068%;width:81.773%;">
+			<p class="pstyle1">In this sprint, we focused on preparing for user testing and created prototypes of interfaces to test with. We also finished up all of our text side software and created our firmware during. This sprint, we created a moving gantry and mounted some solenoids and a punch plate. This sprint was where the pieces all really started coming together, and we were very close to a minimum viable product: a machine that could take in a text file and punch solenoids according to the braille characters. </p>
+		</div>
+		<div id="ai0-3" class="Layer_1 aiAbs" style="top:29.8292%;left:9.1068%;width:81.773%;">
+			<p class="pstyle2" style="text-align:center">Electrical</p>
 			<p>&nbsp;</p>
-			<p class="pstyle1">In this sprint, we focussed on preparing for user testing, and created prototypes of interfaces to test with. We also finished up all of our text side software and created our firmware during. This sprint, we created a moving gantry and mounted some solenoids and a punch plate. This sprint was where the pieces all really started coming together, and we were very close to a minimum viable product: a machine which could take in a text file and punch solenoids according to the braille characters. </p>
-		</div>
-		<div class="Layer_1 aiAbs" style="top:15.2198%;left:57.2451%;width:38.691%;">
-			<p class="pstyle2">Electrical</p>
+			<p class="pstyle1">We were able to control both the stepper motors that power the gantry and a solenoid with the Arduino this sprint and made major developments with the custom PCB design, making sure we accounted for all components that needed to get powered. Between the 14 solenoids, the stepper drivers and motors, the fan, the paper tray sensor, and other components, we had a lot to cover in our design.</p>
 			<p>&nbsp;</p>
-			<p>*sprint 2 text</p>
+			<p class="pstyle1">Pictured above is the progress made on the PCB layout by the end of sprint 2. We haven&rsquo;t finalized all the features for the PCB at this point and more will be added in sprint 3.</p>
 		</div>
-		<div class="Layer_1 aiAbs" style="top:24.8188%;left:50.3167%;margin-left:-40.8865%;width:81.773%;">
-			<p class="pstyle3">*sprint 2 text*</p>
-		</div>
-		<div class="Layer_1 aiAbs" style="top:35.8752%;right:57.8784%;width:38.691%;">
-			<p class="pstyle0">Mechanical</p>
+		<div id="ai0-4" class="Layer_1 aiAbs" style="top:51.0515%;left:9.2671%;width:81.773%;">
+			<p class="pstyle2" style="text-align:center">Mechanical</p>
 			<p>&nbsp;</p>
-			<p class="pstyle1">*sprint 2 text*</p>
-		</div>
-		<div class="Layer_1 aiAbs" style="top:45.4632%;left:49.9222%;margin-left:-39.6852%;width:79.3703%;">
-			<p class="pstyle3">*sprint 2 text*</p>
-		</div>
-		<div class="Layer_1 aiAbs" style="top:57.5512%;left:57.4736%;width:38.691%;">
-			<p class="pstyle2">Software</p>
+			<p class="pstyle1">We built a preliminary structure out of 80/20, and built a roller gantry from sheet aluminum. We mounted a solenoid to the gantry and got a belt drive system working and moving. In addition, we took apart an old inkjet printer and added its paper rolling mechanism to our prototype driven by a stepper through a flex coupler. </p>
 			<p>&nbsp;</p>
-			<p>*sprint 2 text*</p>
-		</div>
-		<div class="Layer_1 aiAbs" style="top:66.9287%;left:50.5452%;margin-left:-40.8865%;width:81.773%;">
-			<p class="pstyle3">*sprint 2 text*</p>
-		</div>
-		<div class="Layer_1 aiAbs" style="top:78.0752%;right:57.8784%;width:38.691%;">
-			<p class="pstyle0">Design</p>
+			<p class="pstyle1">In addition, Annie designed and 3d printed a user interface that incorporates LEDs, large buttons with readable braille, and a switch to turn sound on and off. </p>
 			<p>&nbsp;</p>
-			<p class="pstyle1">*sprint 2 text*</p>
 		</div>
-		<div class="Layer_1 aiAbs" style="top:87.1632%;left:49.9222%;margin-left:-39.6852%;width:79.3703%;">
-			<p class="pstyle3">*sprint 2 text*</p>
+		<div id="ai0-5" class="Layer_1 aiAbs" style="top:62.2017%;left:9.1068%;width:81.773%;">
+			<p class="pstyle2" style="text-align:center">Software</p>
+			<p>&nbsp;</p>
+			<p class="pstyle1">We did two major things from a code perspective this sprint: writing the firmware and completing the text to braille software in its entirety. Interestingly enough, we actually didn&rsquo;t edit either of those components very much after this sprint. </p>
+			<p>&nbsp;</p>
+			<p class="pstyle1">We wrote firmware for our Arduino Mega which managed the movement of the steppers and firing of the solenoids. The Arduino controls both of these by writing to digital pins that are connected to the PCB. We based our stepper movements off of the AccelStepper library, which provides support for accelerations and absolute positioning. The Arduino communicates with the Raspberry Pi by a serial interface, which receives commands from the RasPi and executes them.</p>
+			<p>&nbsp;</p>
+			<p class="pstyle1">We also finished the remaining components of the text side software. This included compiling all of the segments of braille into page objects and all of those pages into documents. After that, we created code which worked with the firmware and did the analysis of everything related to the physical printing of the pages, like where to write content and how to write it. </p>
+			<p>&nbsp;</p>
+			<p>&nbsp;</p>
 		</div>
-		<div class="Layer_1 aiAbs" style="top:95.8973%;left:49.9782%;margin-left:-43%;width:86%;">
-			<p class="pstyle3">Other things if we have things to say (eg: major/minor pivots, lessons learned, fun facts)</p>
+		<div id="ai0-6" class="Layer_1 aiAbs" style="top:80.5439%;left:8.9787%;width:81.9387%;">
+			<p class="pstyle2" style="text-align:center">Design</p>
+			<p>&nbsp;</p>
+			<p class="pstyle1">The main task this sprint on the design side was to start planning user testing. We sent an email out to several contacts at the Visually Impaired and Blind User Group as well as the Carroll Center for the Blind to see if we could meet with individuals who are visually impaired or blind to get some feedback. VIBUG meets on the second Saturday of every month, so we planned on attending their November meeting. In preparation for this meeting, we created a test plan, which included a short script and list of questions, plus a mock user interface and braille sizing sheet.</p>
+			<p>&nbsp;</p>
+			<p class="pstyle1">Additionally, our friends at the Carroll Center helped us figure out how many characters are usually on a line of braille and how many lines are on a sheet of braille, which is surprisingly difficult to find out if you don&rsquo;t own a braille document.</p>
+			<p class="pstyle1"> </p>
+			<p>&nbsp;</p>
+			<p>&nbsp;</p>
+		</div>
+		<div id="ai0-7" class="Layer_1 aiAbs" style="top:94.3889%;left:9.0134%;width:81.773%;">
+			<p class="pstyle1"><span class="cstyle0">Sprint 2 Fun Fact:</span> We didn&rsquo;t come up with the names Portabraille and Dot Dot Dot until this sprint. During sprint one, we were TBD: Typing Braille Divas, and our device was unnamed. </p>
+			<p>&nbsp;</p>
+			<p class="pstyle1"> </p>
+			<p>&nbsp;</p>
+			<p>&nbsp;</p>
 		</div>
 
 		<div style="width:1000px;left:50%;margin-left:-500px">
-  		<div class="Layer_1 aiAbs aiPointText" style="top:5787px;margin-top:-17.5px;left:9.4243%;width:81px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:5897px;margin-top:-17.5px;left:9.4243%;width:81px;">
   			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/instructions.html">instructions</a>
   		</div>
-      <div class="Layer_1 aiAbs aiPointText" style="top:5787px;margin-top:-17.5px;left:27%;width:81px;">
+      <div class="Layer_1 aiAbs aiPointText" style="top:5897px;margin-top:-17.5px;left:27%;width:81px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/system.html">system</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:5787px;margin-top:-17.5px;left:42%;width:73px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:5897px;margin-top:-17.5px;left:42%;width:73px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/process.html">process</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:5787px;margin-top:-17.5px;left:57%;width:160px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:5897px;margin-top:-17.5px;left:57%;width:160px;">
           <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/blog.html">blog</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:5787px;margin-top:-17.5px;left:69%;width:133px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:5897px;margin-top:-17.5px;left:69%;width:133px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/resources.html">resources</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:5787px;margin-top:-17.5px;left:85%;width:110px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:5897px;margin-top:-17.5px;left:85%;width:110px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/team.html">team</a>
   		</div>
     </div>
