made borders scale!

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <div class="circle450 blue3" style="left:55%;top:16.5%"></div>
     <div class="circle250 blue1" style="left:72%;top:9.5%"></div>
     <div class="circle675 blue2" style="left:10%;top:9.5%"></div>
-    <div class="aiAbs" style="align:center;height:13.3%;width:71.33%;left:50%;margin-left:-36%;top:11.5%">
-      <div class="frame" style="height:100%;width:100%;"></div>
-      <img class="portrait" alt="The Portabraille Printer!" style="width:95%;height:93%;top:25px;left:50%;margin-left:-47%" src="Website Graphics\homepagePrinter.jpg"/></img>
+    <div class="aiAbs" style="align:center;height:13.3%;width:71.33%;left:50%;margin-left:-30%;top:10.2%">
+      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
+      <img class="portrait" alt="The Portabraille Printer!" style="width:80%;height:auto;top:25px;left:50%;margin-left:-47%;outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\homepagePrinter.jpg"/></img>
     </div>
 
     <div class="dotdotdot" style="top:27.4%;left:50%;margin-left:-55px">
@@ -40,8 +40,8 @@
     <div class="circle300 blue3" style="left:3%;top:33.7%"></div>
     <div class="circle150 blue1" style="left:40%;top:36.1%"></div>
     <div class="aiAbs" style="align:center;height:7.8%;width:43%;left:6%;top:30.6%">
-      <div class="frame" style="height:100%;width:100%;"></div>
-      <img class="portrait" alt="The Portabraille Printer!" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\homepagePunch.jpg"/></img>
+      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
+      <img class="portrait" alt="The Portabraille Printer!" style="width:80%;height:auto;top:20px;left:50%;margin-left:-46.5%;outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\homepagePunch.jpg"/></img>
     </div>
 
     <div class="dotdotdot" style="top:42%;left:50%;margin-left:-55px">
@@ -56,24 +56,24 @@
     <div class="circle400 blue2" style="right:3%;top:43.5%"></div>
     <div class="circle150 blue1" style="right:40%;top:44%"></div>
     <div class="aiAbs" style="align:center;height:7.8%;width:43%;right:6%;top:45.8%">
-      <div class="frame" style="height:100%;width:100%;"></div>
-      <img class="portrait" alt="The Portabraille Printer!" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\homepageInterface.jpg"/></img>
+      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
+      <img class="portrait" alt="The Portabraille Printer!" style="width:80%;height:auto;top:20px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\homepageInterface.jpg"/></img>
     </div>
 
     <div class="circle300 blue3" style="left:33%;top:62%"></div>
     <div class="circle400 blue2" style="left:3%;top:57%"></div>
     <div class="circle150 blue1" style="left:6%;top:65%"></div>
     <div class="aiAbs" style="align:center;height:7.8%;width:43%;left:6%;top:60.3%">
-      <div class="frame" style="height:100%;width:100%;"></div>
-      <img class="portrait" alt="The Portabraille Printer!" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\homepageSolenoids.jpg"/></img>
+      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
+      <img class="portrait" alt="The Portabraille Printer!" style="width:80%;height:auto;top:20px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\homepageSolenoids.jpg"/></img>
     </div>
 
     <div class="circle400 blue2" style="right:3%;top:74.3%"></div>
     <div class="circle300 blue3" style="right:3%;top:71%"></div>
     <div class="circle150 blue1" style="right:40%;top:73%"></div>
     <div class="aiAbs" style="align:center;height:7.8%;width:43%;right:6%;top:73.5%">
-      <div class="frame" style="height:100%;width:100%;"></div>
-      <img class="portrait" alt="The Portabraille Printer!" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\homepageFreshBraille.jpg"/></img>
+      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
+      <img class="portrait" alt="The Portabraille Printer!" style="width:80%;height:auto;top:20px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\homepageFreshBraille.jpg"/></img>
     </div>
 
     <div class="dotdotdot" style="top:84.7%;left:50%;margin-left:-55px">
@@ -128,7 +128,7 @@
 			<p>We designed with along with users and, following their feedback, made sure to keep the Portabraille Printer portable, accurate, light, fast, and cheap.</p>
 		</div>
 
-		<div class="Layer_1 aiAbs" style="top:44.5%;right:55.6748%;width:38.691%;">
+		<div class="Layer_1 aiAbs" style="top:45.5%;right:55.6748%;width:38.691%;">
 			<p class="pstyle3">The Portabraille Printer takes in a text file, converts it to braille, and embosses a sheet of paper with the converted braille.</p>
 			<p>&nbsp;</p>
 			<p class="pstyle4">First, users input their file either via a USB port or over the printer's wireless network. Once the file is loaded, users can use the interface to control the print. When the print is started, the chosen file is converted into printable braille!</p>
