--- a/team.html
+++ b/team.html
@@ -48,7 +48,7 @@
     <div class="circle175 blue2" style="left:28.5%;top:42%"></div>
     <div class="circle350 blue1" style="left:4%;top:44.5%"></div>
     <div class="aiAbs" style="align:center;height:7.6%;width:28.5%;left:9%;top:43.8%">
-      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
+      <!-- <div class="frame" style="height:100%;wicomdth:100%;"></div> -->
       <img class="portrait" alt="Nathan's Portrait" style="width:auto;height:89%;top:20px;left:50%;margin-left:-44.5%; outline:0.3vw solid black; outline-offset: 1vw;" src="Website Graphics\teamNathan.jpg"/></img>
     </div>
 
