--- a/process.html
+++ b/process.html
@@ -24,8 +24,8 @@
     <div class="circle300 blue3" style="left:3%;top:31%"></div>
     <div class="circle150 blue1" style="left:40%;top:41%"></div>
     <div class="aiAbs" style="align:center;height:26.5%;width:38.6%;left:6%;top:21.5%">
-      <div class="frame" style="height:100%;width:100%;"></div>
-      <img class="portrait" alt="Fun team photo" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\processTeam.jpg"/></img>
+      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
+      <img class="portrait" alt="Fun team photo" style="width:94%;height:auto;top:20px;left:50%;margin-left:-46.5%;outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\processTeam.jpg"/></img>
     </div>
 
     <div class="dotdotdot" style="top:59%;left:50%;margin-left:-55px">
