--- a/sprint2.html
+++ b/sprint2.html
@@ -24,8 +24,8 @@
     <div class="circle300 blue3" style="right:3%;top:6.8%"></div>
     <div class="circle150 blue1" style="left:50.8%;top:9.3%"></div>
     <div class="aiAbs" style="height:350px; width:530px; right:6%;top:4.8%">
-      <div class="frame" style="height:100%;width:100%;"></div>
-      <img class="portrait" alt="Some of the team in action in Colin and Nathan's room" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\sprint2working.jpg"/></img>
+      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
+      <img class="portrait" alt="Some of the team in action in Colin and Nathan's room" style="width:94%;height:auto;top:20px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\sprint2working.jpg"/></img>
     </div>
 
 		<div class="dotdotdot" style="top:18.9%;left:50%;margin-left:-55px">
@@ -40,8 +40,8 @@
 		<div class="circle400 blue2" style="left:23%;top:20.8%"></div>
 		<div class="circle150 blue1" style="right:26%;top:20.8%"></div>
     <div class="aiAbs" style="height:350px; width:530px; right:32%;top:21.8%">
-      <div class="frame" style="height:100%;width:100%;"></div>
-      <img class="portrait" alt="PCB diagram as of sprint 2" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\sprint2PCB.png"/></img>
+      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
+      <img class="portrait" alt="PCB diagram as of sprint 2" style="width:94%;height:auto;top:20px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\sprint2PCB.png"/></img>
     </div>
 
 		<div class="dotdotdot" style="top:39.5%;left:50%;margin-left:-55px">
@@ -56,8 +56,8 @@
     <div class="circle300 blue3" style="right:23%;top:41%"></div>
     <div class="circle150 blue1" style="left:29%;top:47%"></div>
     <div class="aiAbs" style="height:350px; width:530px; left:32%;top:42.3%">
-      <div class="frame" style="height:100%;width:100%;"></div>
-      <img class="portrait" alt="Mechanical assembly as of sprint 2" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\sprint2mechanical.jpg"/></img>
+      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
+      <img class="portrait" alt="Mechanical assembly as of sprint 2" style="width:94%;height:auto;top:20px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\sprint2mechanical.jpg"/></img>
     </div>
 
 		<div class="dotdotdot" style="top:59.5%;left:50%;margin-left:-55px">
